--- a/project.config.json
+++ b/project.config.json
@@ -1,13 +1,15 @@
 {
-  "description": "A WePY project",
-  "setting": {
-    "urlCheck": true,
-    "es6": false,
-    "postcss": false,
-    "minified": false
-  },
-  "compileType": "miniprogram",
-  "appid": "wxf1ab6b7a4fe6f409",
-  "projectname": "wechat-app-group",
-  "miniprogramRoot": "./dist"
+	"description": "A WePY project",
+	"setting": {
+		"urlCheck": true,
+		"es6": false,
+		"postcss": false,
+		"minified": false,
+		"newFeature": true
+	},
+	"compileType": "miniprogram",
+	"appid": "wxf1ab6b7a4fe6f409",
+	"projectname": "wechat-app-group",
+	"miniprogramRoot": "dist/",
+	"condition": {}
 }
